--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
   h1 {
+    font-weight: 500;
     color:#090f02;
   }
 }
@@ -24,7 +25,42 @@ body {
 * {
   font-family: 'Inter', system-ui;
 }
+.overlay {
+ 
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left:  0;
+  top: 0;
 
+  // background-color: #ffffff;
+  background: 0px 0px 0px rgba(0, 0, 0, 0.9);
+  z-index: 1;
+
+}
+.drawer {
+  
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background: #fff;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  h2 {
+    font-size: 24px;
+    margin: 0;
+
+  }
+  .items {
+    flex: 1;
+  overflow: auto;
+  margin-bottom: 40px;
+
+}
+}
 .wrapper {
   background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
@@ -61,6 +97,8 @@ header {
   width: 220px;
   padding: 20px;
   margin-right: 30px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  cursor: pointer;
   span {
     opacity: 0.5;
     font-size: 12px;
@@ -69,9 +107,18 @@ header {
   b {
     font-size: 12px;
   }
+  &:hover {
+    box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
+  }
+  .favorite {
+    position: absolute;
+    cursor: pointer;
+
+  }
 }
 h5 {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
 }
 .cartEmpty {
@@ -116,6 +163,7 @@ h5 {
     top: 14px;
     right: 15px;
   }
+
 
   input {
     border: 0;
@@ -177,9 +225,9 @@ button {
 }
 .greenButton {
   width: 100%;
-  height: 55px;
+  height:  52px;
   background: #9dd558;
-  border-radius: 18px;
+  border-radius: 10px;
   border: 0;
   color: #fff;
   font-size: 16px;
@@ -210,7 +258,7 @@ button {
   .cartItemImg {
     height: 70px;
     width: 70px;
-    background-size: contain;
+    background-size: containr;
     background-position: 0 -3px;
     background-repeat: no-repeat;
     margin-right: 20px;
