--- a/src/index.scss
+++ b/src/index.scss
@@ -47,7 +47,7 @@ body {
   height: 100%;
   right: 0;
   background: #fff;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.5);
   padding: 30px;
   h2 {
     font-size: 24px;
@@ -57,7 +57,7 @@ body {
   .items {
     flex: 1;
   overflow: auto;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 
 }
 }
@@ -115,6 +115,42 @@ header {
     position: absolute;
     cursor: pointer;
 
+  }
+  .drawer {
+  
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 420px;
+    height: 100%;
+    right: 0;
+    background: #fff;
+    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    h2 {
+      font-size: 24px;
+      margin: 0;
+  
+    }
+    .overlay {
+ 
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left:  0;
+      top: 0;
+    
+      // background-color: #ffffff;
+      background: 0px 0px 0px rgba(0, 0, 0, 0.9);
+      z-index: 1;
+    
+    }
+    .items {
+      flex: 1;
+    overflow: auto;
+    margin-bottom: 0px;
+  
+  }
   }
 }
 h5 {
@@ -176,12 +212,12 @@ h5 {
 .cartTotalBlock {
   ul {
     display: block;
-    margin-bottom: 40px !important;
+    margin-bottom: 10px !important;
 
     li {
       display: flex;
       align-items: flex-end;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
 
       div {
         flex: 1;
@@ -258,7 +294,7 @@ button {
   .cartItemImg {
     height: 70px;
     width: 70px;
-    background-size: containr;
+    background-size: contain;
     background-position: 0 -3px;
     background-repeat: no-repeat;
     margin-right: 20px;
