--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,7 @@ body {
 .drawer {
   
   display: flex;
+ 
   flex-direction: column;
   position: absolute;
   width: 420px;
@@ -55,9 +56,9 @@ body {
 
   }
   .items {
-    flex: 1;
+  
   overflow: auto;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
 
 }
 }
@@ -140,8 +141,8 @@ header {
       left:  0;
       top: 0;
     
-      // background-color: #ffffff;
-      background: 0px 0px 0px rgba(0, 0, 0, 0.9);
+      background-color: #ffffff;
+      background: 0px 0px 0px rgba(0, 0, 0, 1);
       z-index: 1;
     
     }
@@ -166,6 +167,7 @@ h5 {
   }
 
   .greenButton {
+    position: relative;
     width: 245px;
     margin-top: 20px;
 
@@ -176,8 +178,9 @@ h5 {
     }
 
     img {
-      position: relative;
-      top: 1px;
+      position: absolute;
+      top: 20px;
+      right: 30px;
       transform: rotate(180deg);
       margin-right: 15px;
       transition: transform 0.15s ease-in-out;
