--- a/src/index.scss
+++ b/src/index.scss
@@ -34,7 +34,7 @@ body {
   top: 0;
 
   // background-color: #ffffff;
-  background: 0px 0px 0px rgba(0, 0, 0, 0.9);
+  background-color:  rgba(0, 0, 0, 0.5);
   z-index: 1;
 
 }
@@ -94,10 +94,11 @@ header {
   }
 }
 .card {
-  border: 1px solid rgb(216, 216, 219);
-  width: 220px;
-  padding: 20px;
+  border: 1px solid rgb(55, 55, 56);
+  width: 200px;
+  padding: 10px;
   margin-right: 30px;
+  margin-bottom: 40px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   cursor: pointer;
   span {
@@ -142,14 +143,14 @@ header {
       top: 0;
     
       background-color: #ffffff;
-      background: 0px 0px 0px rgba(0, 0, 0, 1);
+      background:  rgba(0, 0, 0, 0.5);
       z-index: 1;
     
     }
     .items {
       flex: 1;
     overflow: auto;
-    margin-bottom: 0px;
+    margin-bottom: 30px;
   
   }
   }
